# twitch_bot

./: .gitmodules  CMakeLists.txt  main.cpp
src/: IncomingMessage.cpp  IncomingMessage.h  Message.cpp  Message.h  OutcomingMessage.cpp  OutcomingMessage.h  TwitchBot.cpp  TwitchBot.h  tst_queue.h  tst_queue.hpp  twitch_bot.cpp  twitch_bot.h
src/db/: db_communicator.h  db_handler_communicator.h  db_message_communicator.h  mongodb_communicator.cpp  mongodb_communicator.h
src/db/support/: bson_handler_serializer.cpp  bson_handler_serializer.h  bson_irc_serializer.cpp  bson_irc_serializer.h
src/db/support/configuration/: mongodb_libconfig.cpp  mongodb_libconfig.h
src/db/support/serialization/: bson_handler_serializer.cpp  bson_handler_serializer.h  bson_irc_serializer.cpp  bson_irc_serializer.h
src/execution/: user_code_execution.h
src/execution/pybind/: python_execution.cpp  python_execution.h
src/handlers/: cpp_event_handler.h  event_handler.h  python_event_handler.cpp  python_event_handler.h
src/handling/: events.h
src/handling/handlers/: event_handler.h
src/interface/: basic_console_interface.cpp  basic_console_interface.h  console_interface.h  ncurses_console_interface.cpp  ncurses_console_interface.h
src/irc/: IRCClient.cpp  IRCClient.h  Message.cpp  Message.h  irc_client.cpp  irc_client.h  message.cpp  message.h
src/utils/: logging.hpp  temporary_file.hpp
